app/assets/stylesheets/global/custom.css.scss
/*@import "bootstrap";*/

/* Box-sizing that can be included on debug */
@mixin box_sizing {
  -moz-box-sizing: border-box; 
  -webkit-box-sizing: border-box; 
  box-sizing: border-box;
}

/* universal */

body {
  padding-top: 60px; /*so that container goes below navbar*/
}

/*
section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}
*/
/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

/*
h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.7em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $grayLight;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}
*/
/*Messages*/

.messages {
  list-style:none;
  .from {align: right; background-color: #CCFFCC; margin-left:50%; width:50%; padding: 5px 5px; margin-top:5px; border-radius: 10px; -moz-border-radius: 10px;}
  .to {align: right; background-color: #F8F8F8; width:50%; padding: 5px 5px; margin-top:5px;  border-radius: 10px; -moz-border-radius: 10px;}
  .date { font-size: xx-small; text-align: right;}
  .message_thumbnail { height: 30px; width: 30px; padding-right: 10px;} 
 }

.unreadmessageflash {
    color:white;
    background:red;
    border-radius:5px;
    padding:5px;
    margin:1px;
    float:right;
    font-height:10px;
}

/*Apps*/

.apps {
  list-style: none;
  margin: 10px 0 0 0;

  li {
    padding: 10px 0;
    border-top: 1px solid #e8e8e8;
    height:60px;
  }
  h4 { line-spacing: 0.1;}

  .app-element {
    margin-left:80px;
  }
  
  .appthumbnail {
    float:left;
    width:60px;
    height:60px;
    margin-right: 10px;    
  }
  .description {
    display: block;
  } 
  .url {
    color: gray;    
  } 
  .mobile_url {
    color: gray;    
  } 
  .subscribe_form {
    float:right;
  }
}

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: white;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  line-height: 1;
  /* Sass changes &:hover into #logo:hover from SCSS to CSS. */
  &:hover {
    color: white;
    text-decoration: none;
  }
}

/*Forms*/
textarea {
  height:3em;
  width: 100%;
}

input {
  width: 100%;
}

/*Checkins*/
.userlistitem {margin-bottom: 20px; background:#F0F0F0; padding:5px 5px; border-style:solid; border-color:#D0D0D0}
.checkin-button {margin-top: 5px;}
.userlistitem a {font-size:20px; font-style:bold; padding-left:10px; line-height:50px;}
.checkins_user_img{float:left; width:50px; height:50px; margin-right:10px;}
.checkins_user_name {float:left;}
.checkins_count {float:left; width:50px; height:50px; background:#6699FF;font-size:40px; line-height:50px;text-align:center; margin-right:10px; color:white;}
.checkin_form{clear:both; text-align:right;}

/*User Login*/
.signin-intro { background-color:rgba(0,153,51,0.7); border-radius:5px; padding:5px; margin:20px; color:white; font-size:20px; line-height:25px; text-align:center;}
.userlistitem-login {margin: 5px 5px; width:50px; height:50px; background:#F0F0F0; float:right; position:relative;}
  .user_img-login{width:50px; height:50px; position:absolute; top:0; left:0; }
  .checkins_count-login {width:25px; height:25px; background:#6699FF;font-size:20px; line-height:20px;text-align:center; color:white; position:absolute; z-index:10;}
.signin-intro-text {clear:both;} //clear float
.signin-button {height: 30px; text-align:center;}

.signin-image {
  padding-left:10%;
}

.signin-image-mobile {
  position:absolute;
  top:0;
  left:0;
  z-index:-1;
  text-align:center;
  padding-left:10%;
}



/*Login Study Disclaimer*/
.studydisclaimer {font-size:8pt; line-height:9pt; margin: 5px 5px; margin-top:30px; }

/*Scanner apps*/
.qr-scanner-list {position:absolute; bottom:5px; right:5px; background:#F0F0F0; text-align: center; border-radius: 5px; padding: 5px 5px; }
.qr-scanner {height: 30px; margin: 2px 2px;}

/*Tutorial*/
.tutorial-text {font-size:100%; background: #DDFFFF; border-radius: 5px; padding: 5px 5px; margin: 5px 5px;}


/*Errors*/
#error_explanation {
  color: #f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
 }

.mobileappcontainer {
  position:absolute;
  top: 60px;
  left: 0px;
}

.element.style {
  width:0px;
  heigth:0px;
}

